@@ -8,14 +8,14 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G3RotTable.hh,v 1.7 1999-11-11 15:35:42 gunter Exp $
+// $Id: G3RotTable.hh,v 1.8 1999-11-23 04:27:25 lockman Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
 // Maps G3 rotation indices to G3toG4RotationMatrix*
 
 #include "g4rw/tphdict.h"
-class G3toG4RotationMatrix;
+#include "G3toG4RotationMatrix.hh"
 
 class G3RotTable {
 private:
@@ -25,7 +25,7 @@ private:
 public:
   G3RotTable();
   ~G3RotTable();
-  G3toG4RotationMatrix* get(G4int rotid);
+  G4RotationMatrix* get(G4int rotid);
   void put(G4int rotid, G3toG4RotationMatrix* rotpt);
 };
 
